Infrastructure/k8s/services/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: ecosystem
  labels:
    app: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
